examples/negative/mutable/param_hashmap_get_no_row.kai
# Negative fixture (Mutable contract — the qualified-call masking hole,
# explicit-call companion to param_hashmap_index_no_row). Calling
# `hashmap.get(m, key)` EXPLICITLY (not via the `m[key]` sugar) on a
# HashMap PARAMETER is the same observable `Mutable` use: `hashmap.get`
# carries `/ Mutable` and dispatches through the evidence stack. The
# caller shares the map, so the function's row must keep `Mutable`; a
# pure row must be rejected.
#
# This is the direct form of the masking-demand hole: `hashmap.get` is an
# `EModCall("hashmap", "get")` callee. `all_demands_local` only inspected
# `EVar` callees, so the qualified module call fell to `_ -> true`
# ("demand is local") and `Mutable` was stripped — compile-clean,
# runtime SEGV. The fix treats an `EModCall` whose type carries
# `/ Mutable` like any other Mutable demand: a parameter argument is not
# local, so the effect stays on the row and this is rejected at compile
# time.

import collections.hashmap.{HashMap, get}

fn lookup(m: HashMap[String, Int], key: String) : Option[Int] = get(m, key)

fn main() : Unit / Console = {
  print("unreachable")
}
